--- a/frontend/web.config
+++ b/frontend/web.config
@@ -1,10 +1,14 @@
-﻿<?xml version="1.0" encoding="UTF-8"?>
-<configuration>
+﻿<configuration>
   <system.webServer>
     <defaultDocument>
       <files>
+        <clear />
         <add value="index.php" />
       </files>
     </defaultDocument>
+    <staticContent>
+      <mimeMap fileExtension=".json" mimeType="application/manifest+json" />
+      <mimeMap fileExtension=".js" mimeType="application/javascript" />
+    </staticContent>
   </system.webServer>
 </configuration>
