--- a/backend/package.json
+++ b/backend/package.json
@@ -2,7 +2,10 @@
   "name": "maps-to-gpx-backend",
   "version": "1.0.0",
   "main": "index.js",
-  "scripts": { "start": "node index.js" },
+  "scripts": {
+    "postinstall": "npx puppeteer browsers install chrome",
+    "start": "node index.js"
+  },
   "dependencies": {
     "express": "^4.18.2",
     "puppeteer": "^21.3.8",
