--- a/backend/package.json
+++ b/backend/package.json
@@ -7,8 +7,9 @@
     "start": "node index.js"
   },
   "dependencies": {
+    "@mapbox/polyline": "^1.1.1",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
-    "puppeteer": "^22.8.2",
-    "@mapbox/polyline": "^1.1.1"
+    "puppeteer": "^22.8.2"
   }
 }
